# hxwk

./: .clang-format  .gitignore  .ycm_extra_conf.py  AST.hpp  ASTInfo.cpp  ASTInfo.hpp  C++11Compat.hpp  CMakeLists.txt  IRGenerator.cpp  IRGenerator.hpp  Lexer.cpp  Lexer.hpp  Log.hpp  Parser.cpp  Parser.hpp  Type.hpp  VisitorPattern.hpp  main.cpp  ycm_extra_conf.py.in
examples/: collatz.hx  fac.hx  prime.hx
